添加删除分享画廊的API支持
